--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+beautifulsoup4==4.12.3
 blinker==1.8.0
+bs4==0.0.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 Flask-Cors==4.0.0
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+pillow==10.3.0
+pytube==15.0.0
+requests==2.31.0
+soupsieve==2.5
+telegraph==2.2.0
+urllib3==2.2.1
 Werkzeug==3.0.2
