--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,29 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.1
+cycler==0.12.1
 Flask==3.0.3
 Flask-Cors==4.0.0
+fonttools==4.51.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.3
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.8.4
+numpy==1.26.4
+packaging==24.0
 pillow==10.3.0
+pyparsing==3.1.2
+pyTelegramBotAPI==4.17.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytube==15.0.0
 requests==2.31.0
+six==1.16.0
 soupsieve==2.5
+telebot==0.0.5
 telegraph==2.2.0
 urllib3==2.2.1
 Werkzeug==3.0.2
